# ChangeLog for games-mud/tintin
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/games-mud/tintin/ChangeLog,v 1.129 2014/08/25 21:54:13 mr_bones_ Exp $

*tintin-2.01.0 (25 Aug 2014)

  25 Aug 2014; Michael Sterrett <mr_bones_@gentoo.org> +tintin-2.01.0.ebuild:
  version bump

  25 Aug 2014; Michael Sterrett <mr_bones_@gentoo.org>
  -files/tintin-2.00.8-ldpermission.patch, -tintin-2.00.8.ebuild:
  old

  25 Feb 2013; Agostino Sarubbo <ago@gentoo.org> tintin-2.00.9.ebuild:
  Stable for x86, wrt bug #458238

  22 Feb 2013; Agostino Sarubbo <ago@gentoo.org> tintin-2.00.9.ebuild:
  Stable for ppc, wrt bug #458238

  19 Feb 2013; Chema Alonso <nimiux@gentoo.org> tintin-2.00.9.ebuild:
  Stable for amd64 wrt bug #458238

*tintin-2.00.9 (17 Jan 2013)

  17 Jan 2013; Michael Sterrett <mr_bones_@gentoo.org>
  +files/tintin-2.00.9-ldpermission.patch, +tintin-2.00.9.ebuild:
  version bump (bug #452254)

  02 Jul 2012; Michael Sterrett <mr_bones_@gentoo.org>
  -files/tintin-2.00.6-ldpermission.patch,
  -files/tintin-2.00.7-ldpermission.patch, -tintin-2.00.6.ebuild,
  -tintin-2.00.7.ebuild:
  old

  06 Mar 2012; Brent Baude <ranger@gentoo.org> tintin-2.00.8.ebuild:
  Marking tintin-2.00.8 ppc for bug 402913

  16 Feb 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> tintin-2.00.8.ebuild:
  x86 stable wrt bug #402913

  10 Feb 2012; Agostino Sarubbo <ago@gentoo.org> tintin-2.00.8.ebuild:
  Stable for amd64, wrt bug #402913

  10 Jan 2012; Brent Baude <ranger@gentoo.org> tintin-2.00.7.ebuild:
  Marking tintin-2.00.7 ppc for bug 395453

*tintin-2.00.8 (10 Jan 2012)

  10 Jan 2012; Michael Sterrett <mr_bones_@gentoo.org> +tintin-2.00.8.ebuild,
  +files/tintin-2.00.8-ldpermission.patch:
  version bump

  04 Jan 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> tintin-2.00.7.ebuild:
  x86 stable wrt bug #395453

  21 Dec 2011; Agostino Sarubbo <ago@gentoo.org> tintin-2.00.7.ebuild:
  Stable for AMD64, wrt bug #395453
