@@ -2,6 +2,6 @@ AUX tintin-2.00.9-ldpermission.patch 327 SHA256 01f8035f95b6db1c35b0f5d2479428c2
 DIST tintin-2.00.9.tar.gz 276024 SHA256 cafeee9b60de39d957def5782fb4f8cb29a05af69dc96d3e5807c2d3fb541275 SHA512 88880d7c45028fdc4e20d0acb065e7d578d6dac995a590974b62e418845227bf734f270a6908c8bad13b04265a1c08207e9974c2756b4635697950414e404ba6 WHIRLPOOL 779a39b6c280c0104dc3568d8ab1d7db67cd4e2945a1f501ed8471387a9fc4ccdc0bf7135ce926cb657ae6a95b5cbe7707da49187e8da31d9c8710851abb848a
 DIST tintin-2.01.0.tar.gz 293651 SHA256 e0e35463a97ee5b33ef0b29b2c57fa8276c4e76328cb19c98a6ea92c603a9c76 SHA512 9bad5c3900965ff009c130f5bbeeee197b16bddaf4068329fd3282945ff7b8e17517254468c14f9c9979828ca3ea8bfebacdd3bbfb436d92a02b6ed9ed30af4f WHIRLPOOL e2fb023a38f0be63868ae0f333d19f621624f7b8b0bc8498d0b8cceb0e344df52ba7419829f341b7632a7f1d2c535add215c07911693ee479da74c616433d12a
 EBUILD tintin-2.00.9.ebuild 885 SHA256 b36dc9177b91ed8101403d51b4185723dce9216e737f583cc57c9cc25097db3b SHA512 e31ae500b3210482c517213ecd9776745bbc87c9a1836872883cd07fb6375bedd71d47af64d917826146e3092a61fecbee6c5192f5a1dffe8dfee9d1dc0de20e WHIRLPOOL eb233b5f32f3177cd83adc9d48255972b76e0f2d2542c06e4f018fca1539dc880e3ea93f5b198a471ba8ac97e128e889e122cb97ce267f9b394ca3a7396e6d8c
-EBUILD tintin-2.01.0.ebuild 854 SHA256 1b66c8431acf49492932e4dc06a102cac273167b9a780994b6eebf10a0fc9f0f SHA512 d200316eb57973ed12f0ebc2b40db1644aa377ce6abc29aaae080d8f614ef335fd5b63e8b6bcc768a2b53e98613843b00095212820de6302a56f51fb6b298115 WHIRLPOOL 1a708940ea7cafcd4263896ccdf3045fb945c1130e92d768365f28ae2e1d310cbfeaeaafe068dbb7671a8a7e05442c21ecfa2f1f4a88b718b5cf1b4d083d3d22
-MISC ChangeLog 16194 SHA256 0765236d4b1d54678e725573bdb5206820d8fd5c0938b66b36cd72678269e4e0 SHA512 3f24d35830ebf6e897157acd972f8bb7faa9093703c23fd6dfb3efca0e0e172cc3e5ccd8105ed239359a537188cf76155221ce817f46e1717f9f7723370c808a WHIRLPOOL fede22be4167187ece07adc5b9961918dd28b7ed5107f68a8cb4dce1eb71fc1ed77e1369173f5c332adc095caf98a1f624284794995ca99e660be5b619074819
+EBUILD tintin-2.01.0.ebuild 838 SHA256 c20398c8c6b40cb17174890b7976b14aacfe710ac9941c203efb53ec0ea445ab SHA512 7a3a4268afa755a4983c9224ba634bd8c4003fee80f2b2b8e7f943e71602cd70361b5497e50eb34aa068f47f4f737d9cf8cfc19c2c67810f28d2276c490c68bc WHIRLPOOL f0b2be66b32c70273867c2364e7353ff60283c0cc8ce04d79c2efa9d493cc25c458ffb736e357094ed8e33b5ace199c48311416905b468e1c1cd066dd244f293
+MISC ChangeLog 16332 SHA256 220cca7c9280640c102befa9e1e0482b56aaa463025aaf13fe15793e8aefd320 SHA512 e00541de71d3b800fd6ed2d02d697b052b95a4e05ec54f8924ea072267092d150adbf6f6178d4be1f9f54d2d2671a2aaf57ca356261ca9ae7f511f80cf3981b0 WHIRLPOOL 485be0c01d55e7587e72c3ff763f59cfa50f1e4b5fd41f86d076240181753eb5f9a8ff19057e7b8ef239be0ecab22a61beae1ab07674c84ee6a8294eecb4feee
 MISC metadata.xml 158 SHA256 1423a4fdd4a79b1728a2056d9e300f7e1074253095d82726218d9e9b953888a3 SHA512 d954564236b67b6ab97846b73f74e715e8f1bec2dba6595e9a5046c2e8c3b93f4879c293f9d1d02d99a533bee56156dae3f31a485697128c51af14cdbfdada8a WHIRLPOOL d03e7293d09d794d61c095a423f945b3644355a247f270a73ca8d30b4dfe9c98244297536bfd1a4bd6c14794aa1152eca20fd83bfdf3e1e74d4f676152d35ada
