@@ -1,6 +1,6 @@
 # Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/games-mud/tintin/tintin-2.01.0.ebuild,v 1.1 2014/08/25 21:54:13 mr_bones_ Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-mud/tintin/tintin-2.01.0.ebuild,v 1.2 2014/12/02 19:26:32 mr_bones_ Exp $
 
 EAPI=5
 inherit games
@@ -16,8 +16,7 @@ IUSE=""
 
 DEPEND="sys-libs/zlib
 	dev-libs/libpcre
-	sys-libs/readline
-	sys-libs/ncurses"
+	sys-libs/readline:0"
 RDEPEND=${DEPEND}
 
 S=${WORKDIR}/tt/src
