@@ -1,12 +1,12 @@
 DEFINED_PHASES=compile configure install postinst preinst prepare setup unpack
-DEPEND=sys-libs/zlib dev-libs/libpcre sys-libs/readline sys-libs/ncurses
+DEPEND=sys-libs/zlib dev-libs/libpcre sys-libs/readline:0
 DESCRIPTION=(T)he k(I)cki(N) (T)ickin d(I)kumud clie(N)t
 EAPI=5
 HOMEPAGE=http://tintin.sourceforge.net/
 KEYWORDS=~amd64 ~ppc ~x86
 LICENSE=GPL-2
-RDEPEND=sys-libs/zlib dev-libs/libpcre sys-libs/readline sys-libs/ncurses games-misc/games-envd
+RDEPEND=sys-libs/zlib dev-libs/libpcre sys-libs/readline:0 games-misc/games-envd
 SLOT=0
 SRC_URI=mirror://sourceforge/tintin/tintin-2.01.0.tar.gz
 _eclasses_=base	87f7447ccfc06fd0729ff4684e11e0d6	eutils	6faef4c127028ccbba3a11400d24ae34	games	bc8839608d26ccd57ca4f2f01c67460f	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	0dfbfa13f57c6184f4728d12ac002aac	user	f54e098dd38ba1c0847a13e685b87747
-_md5_=9a7a25f5b148f262cc9187d7db3b595a
+_md5_=32f3592543d2f98651bd61b316bb34a5
